Fixed overflowing anchor tags on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1032,6 +1032,7 @@ pre {
 		position: relative;
 		margin-top: 5px;
 		transition: margin-top .75s linear;
+		word-break: break-word;
 
 }
 
