--- a/source/css/modules/article.css
+++ b/source/css/modules/article.css
@@ -5,6 +5,7 @@
 		position: relative;
 		margin-top: 5px;
 		transition: margin-top .75s linear;
+		word-break: break-word;
 
 
 	&--no-padding {
